# portaconv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  portaconv.portagenty.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: astro.config.mjs  package.json
docs/scripts/: serve.mjs  smoke.mjs  visual.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: agents-and-portagenty.mdx  index.md  index.mdx
docs/src/content/docs/getting-started/: installation.md  quickstart.md
docs/src/content/docs/project/: roadmap.md
docs/src/content/docs/reference/: adapter-claude-code.md  commands.md
examples/: scan-claude-jsonl.rs
knowledgebase/: 01-challenge-source.md  02-agent-research.md  03-design-decisions.md  04-handoff-context.md
src/: cli.rs  lib.rs  main.rs  model.rs
src/adapters/: cache.rs  claude_code.rs  mod.rs
src/mcp/: mod.rs  server.rs
src/render/: markdown.rs  mod.rs
src/transform/: mod.rs  paths.rs
tests/: cli.rs  mcp.rs
tests/fixtures/claude-projects/-test-workspace-sample/: aaaaaaaa-bbbb-cccc-dddd-000000000001.jsonl  agent-a9999.jsonl
tests/fixtures/claude-projects/-test-workspace-sample-before-move/: bbbbbbbb-cccc-dddd-eeee-222222222222.jsonl
tests/fixtures/claude-projects/-test-workspace-sample/parent-uuid/subagents/: agent-asubfixture-999.jsonl
tests/fixtures/claude-projects/C--test-workspace-sample/: aaaaaaaa-bbbb-cccc-dddd-000000000001.jsonl
tests/fixtures/workspaces/: with-previous-paths.portagenty.toml
