[package]
name = "portaconv"
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
description = "Terminal-native conversation extractor + MCP server for agent CLIs (Claude Code first). Normalizes to OpenAI Chat Completions format; paste-ready markdown output; OS-path rewriting."
authors = ["cybersader"]
license = "MIT"
repository = "https://github.com/cybersader/portaconv"
homepage = "https://github.com/cybersader/portaconv"
keywords = ["claude-code", "agent", "conversation", "mcp", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "pconv"
path = "src/main.rs"

[lib]
name = "portaconv"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

[dev-dependencies]
assert_fs = "1.1"
insta = "1.41"
predicates = "3.1"
assert_cmd = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
